# statistic-model-cpp

./: CMakeLists.txt  README.md  a.out  dir.txt  doxygen.conf  doxygen.conf.bak  general  general.cpp  log.txt  stats.hpp  test_stats.cpp
doc/html/: annotated.html  classMenu-members.html  classMenu.html  classMenu__coll__graph.map  classMenu__coll__graph.md5  classes.html  classintp_1_1LinearInterp-members.html  classintp_1_1LinearInterp.html  classintp_1_1LinearInterp__coll__graph.map  classintp_1_1LinearInterp__coll__graph.md5  classintp_1_1LinearInterp__inherit__graph.map  classintp_1_1LinearInterp__inherit__graph.md5  classintp_1_1PolyInterp-members.html  classintp_1_1PolyInterp.html  classintp_1_1PolyInterp__coll__graph.map  classintp_1_1PolyInterp__coll__graph.md5  classintp_1_1PolyInterp__inherit__graph.map  classintp_1_1PolyInterp__inherit__graph.md5  classmisc_1_1Plot-members.html  classmisc_1_1Plot.html  classmisc_1_1Plot__coll__graph.map  classmisc_1_1Plot__coll__graph.md5  classmisc_1_1Table-members.html  classmisc_1_1Table.html  classmisc_1_1Table__coll__graph.map  classmisc_1_1Table__coll__graph.md5  classmisc_1_1Table__inherit__graph.map  classmisc_1_1Table__inherit__graph.md5  classregr_1_1LinearRegression-members.html  classregr_1_1LinearRegression.html  classregr_1_1LinearRegression__coll__graph.map  classregr_1_1LinearRegression__coll__graph.md5  classregr_1_1LinearRegression__inherit__graph.map  (+102 more)
include/: graphs.hpp  int.hpp  intp.hpp  menu.hpp  misc.hpp  reg.hpp  regr.hpp  stats.hpp
test/: int_test.cpp  menu_test.cpp  misc_test.cpp  reg_test.cpp
(+167 files in other folders)
